[B][COLOR gold]v4.02.01[/COLOR][/B]
- Channels fix
- Fixed some issues with Trakt (hopefully)

[B][COLOR gold]v4.02.00[/COLOR][/B]
- Added new "Cast" context menu item, which can list
  all the movies & shows an actor has appeared in
- Fixed issue with "Play random"
- Altered "Find similar" context menu's source from Trakt to TMDb
- Updated debrid hosts list
- Fixed some issues with caching on py3

[B][COLOR gold]v4.01.11[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v4.01.10[/COLOR][/B]
- Fixed TMDb trailers listed twice
- Tweaked YouTube trailers search query

[B][COLOR gold]v4.01.07-9[/COLOR][/B]
- Trailers:
    Added new trailer searching method through TMDb.
    This method does not require a YouTube API key to be set.
    Can be enabled as default trailer search method in settings,
    but add-on will also fallback to it if YouTube method fails.
- Channels category fixes/enhancements - thx JewBMX for the help

[B][COLOR gold]v4.01.06[/COLOR][/B]
- Logging tweaks
- Indexers tweaks

[B][COLOR gold]v4.01.05[/COLOR][/B]
- Fixed seasons not loading for some shows

[B][COLOR gold]v4.01.04[/COLOR][/B]
- Indexers tweaks

[B][COLOR gold]v4.01.03[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v4.01.02[/COLOR][/B]
- Size filtering changes:
    Min/Max movie/episode size settings removed, and replaced with new Min/Max
    GB per hour setting, that applies to both movies & episodes
- Added new [I]Scrape Filterless[/I] context menu entry, that when triggered the add-on
  starts scraping with all sources filters (incl. pre-emptive termination) ignored

[B][COLOR gold]v4.01.01[/COLOR][/B]
- Fixed some py2/Kodi pre-19 encoding issues
- Removed Cloudflare protected scrapers disableing option
  (cloudflare anti-bot protection bypassing doesn't work anymore so
   relevant scrapers get removed from package)
- Source quality/type identification tweaks

[B][COLOR gold]v4.01.00[/COLOR][/B]
- Movies metadata main indexer altered from Trakt to TMDb