@@ -7,7 +7,7 @@ def get():
     try:
         changelogfile = os.path.join(control.addonPath, 'changelog.txt')
         head = 'TheOath  -- Changelog --'
-        control.textViewer(changelogfile, head)
+        control.textViewer(file=changelogfile, heading=head)
     except:
         control.infoDialog('Error opening changelog', sound=True)
         log_utils.log('changeloglog_view_fail', 1)
