@@ -258,17 +258,20 @@ def selectDialog(list, heading=addonInfo('name'), useDetails=False):
     return dialog.select(heading, list, useDetails=useDetails)
 
 
-def textViewer(file, heading=addonInfo('name'), monofont=True):
+def textViewer(file=None, text='', heading=addonInfo('name'), monofont=True):
     sleep(200)
-    if not os.path.exists(file):
-        w = open(file, 'w')
-        w.close()
-    with open(file, 'rb') as r:
-        text = r.read()
-    if not text: text = ' '
+    if file:
+        if not os.path.exists(file):
+            w = open(file, 'w')
+            w.close()
+        with open(file, 'rb') as r:
+            txt = r.read()
+        if not txt: txt = ' '
+    elif text:
+        txt = text
     head = '[COLOR gold][I]%s[/I][/COLOR]' % six.ensure_str(heading, errors='replace')
-    if getKodiVersion() >= 18: return dialog.textviewer(head, text, monofont)
-    else: return dialog.textviewer(head, text)
+    if getKodiVersion() >= 18: return dialog.textviewer(head, txt, monofont)
+    else: return dialog.textviewer(head, txt)
 
 
 # def metaFile():
